Some bugs fixed,navigation map created and something else

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="change_tab_name">تغییر فرش</string>
     <string name="choose1carpet_name">انتخاب فرش نخست</string>
     <string name="choose2carpet_name">انتخاب فیلتر</string>
+    <string name="title_activity_find">مسیریابی</string>
+    <string name="title_activity_seller">مدیریت</string>
+    <string name="title_activity_buyer">خرید</string>
+    <string name="title_activity_navigation">Map</string>
+
 
 </resources>
 
