--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_activity_seller">مدیریت</string>
     <string name="title_activity_buyer">خرید</string>
     <string name="title_activity_navigation">Map</string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
