--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="title_activity_buyer">خرید</string>
     <string name="title_activity_navigation">Map</string>
     <string name="title_activity_maps">Map</string>
-
+    <string name="add_tab_name">اضافه کردن فرش</string>
 
 </resources>
 
